--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": false,
-      "bundleIdentifier": "com.vibecode.caramelopets.n2p4b1",
+      "bundleIdentifier": "com.caramelo.petcare",
       "buildNumber": "1",
       "infoPlist": {
         "NSCameraUsageDescription": "Caramelo Pets uses the camera to capture photos inside the app before you publish them.",
