--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-live-photo": "~0.1.4",
+    "expo-localization": "^17.0.8",
     "expo-mail-composer": "~14.1.4",
     "expo-manifests": "~0.16.4",
     "expo-mesh-gradient": "0.3.4",
