--- a/mobile/package.json
+++ b/mobile/package.json
@@ -52,6 +52,7 @@
     "expo-blur": "~14.1.4",
     "expo-brightness": "~13.1.4",
     "expo-build-properties": "~0.14.6",
+    "expo-calendar": "^15.0.8",
     "expo-cellular": "~7.1.4",
     "expo-checkbox": "~4.1.4",
     "expo-clipboard": "~7.1.4",
