--- a/mobile/app.json
+++ b/mobile/app.json
@@ -23,6 +23,7 @@
       "infoPlist": {
         "NSCameraUsageDescription": "Caramelo Pets uses the camera to capture photos inside the app before you publish them.",
         "NSPhotoLibraryUsageDescription": "Caramelo Pets accesses your photo library to let you choose media that appears in the app.",
+        "NSCalendarsUsageDescription": "Caramelo Pets needs access to your calendar to add care reminders and appointments for your pets.",
         "UIBackgroundModes": [
           "remote-notification"
         ]
@@ -40,11 +41,19 @@
         "android.permission.CAMERA",
         "android.permission.READ_EXTERNAL_STORAGE",
         "android.permission.WRITE_EXTERNAL_STORAGE",
-        "android.permission.POST_NOTIFICATIONS"
+        "android.permission.POST_NOTIFICATIONS",
+        "android.permission.READ_CALENDAR",
+        "android.permission.WRITE_CALENDAR"
       ]
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-calendar",
+        {
+          "calendarPermission": "Caramelo Pets needs access to your calendar to add care reminders and appointments for your pets."
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
