--- a/mobile/app.json
+++ b/mobile/app.json
@@ -3,7 +3,7 @@
     "name": "Caramelo Pets",
     "slug": "meucaramelo",
     "scheme": "caramelo",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "Organize a vida dos seus pets com facilidade! Gerencie perfis, agende lembretes de vacinas e consultas, e acompanhe o crescimento dos seus amigos de quatro patas.",
     "orientation": "portrait",
     "userInterfaceStyle": "automatic",
@@ -19,11 +19,11 @@
     "ios": {
       "supportsTablet": false,
       "bundleIdentifier": "com.caramelo.petcare",
-      "buildNumber": "2",
+      "buildNumber": "3",
       "infoPlist": {
         "NSCameraUsageDescription": "Caramelo Pets uses the camera to capture photos inside the app before you publish them.",
         "NSPhotoLibraryUsageDescription": "Caramelo Pets accesses your photo library to let you choose media that appears in the app.",
-        "NSCalendarsUsageDescription": "Caramelo Pets needs access to your calendar to add care reminders and appointments for your pets.",
+        "NSCalendarsUsageDescription": "Caramelo Pets uses your calendar to place app events onto your device schedule.",
         "UIBackgroundModes": [
           "remote-notification"
         ]
